# hackathon_pharma_portfolio

./: .gitignore  AGENTS.md  README.md  SCRAPLING.md  context.md  instruction_for_agent.md  pharma_agentic.py  pharma_agentic_logging_basic.py  pyproject.toml
.claude/skills/scrapling/: .gitignore  README.md  SKILL.md
data/: pharma_portfolio_enriched.parquet
docs/: _config.yml  approach.md  data-model.md  index.md  overview.md  setup.md  sources.md
notebooks/: 00_reviewing_results.ipynb
pharmas/gsk/: 1q2026-pipeline-list.xlsx  gsk_pipeline.parquet  gsk_xlsx_to_parquet.py  log.md
pharmas/novonordisk/: log.md  novonordisk_to_parquet.py
pharmas/roche/: instructions.md  log.md  schema.py
src/: prepare_ot_ingestion.py  schema.py
src/pharmas/abbvie/: abbvie_pipeline.parquet  abbvie_to_parquet.py  log.md  raw_pipeline.csv  raw_pipeline.json  scrape_pipeline.py
src/pharmas/agent/: finalize.py  gates.py  github.py  ingest.py  pagination.py  probe.py  sources_md.py
src/pharmas/amgen/: amgen_pipeline.parquet  amgen_raw.json  amgen_to_parquet.py  log.md  raw_pipeline.json  scrape_pipeline.py
src/pharmas/astrazeneca/: astrazeneca_pipeline.parquet  astrazeneca_to_parquet.py  log.md  pipeline_page.html
src/pharmas/bayer/: bayer_page.html  bayer_pipeline.parquet  bayer_to_parquet.py  log.md
src/pharmas/bms/: bms_pipeline.parquet  bms_pipeline_page.html  bms_to_parquet.py  log.md  raw_pipeline.json  scrape_pipeline.py
src/pharmas/boehringer_ingelheim/: boehringer_ingelheim_pipeline.parquet  boehringer_ingelheim_to_parquet.py  convert_to_parquet.py  log.md  (+4 more)
(+76 files in other folders)
