[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hackathon-pharma-portfolio"
version = "0.1.0"
description = "Extract, normalize, and integrate drug/disease associations from the investigational portfolios of the top 20 global pharmaceutical companies."
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "langgraph>=1.2.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "polars>=1.42.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "scrapling[fetchers]>=0.4.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
]
